tests/algorithms/transpiler/Zig/strings/aho_corasick.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/strings/aho_corasick.zig:9:36: error: expected expression, found ';'